# enem-irt-public-vs-private

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_download_and_clean.ipynb  01_download_and_clean.py  02_build_hits.py  02_exploratory_analysis.ipynb  03_plot_hits.py  03_regression_models.ipynb  04_figures_and_tables.ipynb  04_regressions.py
src/data/: make_dataset.py
tables/regressions/: regression_table_CH.csv  regression_table_CN.csv  regression_table_LC.csv  regression_table_MT.csv
